--- a/player.html
+++ b/player.html
@@ -6,48 +6,46 @@
   <title>HLS Player</title>
   <style>
     html,body{margin:0;height:100%;background:#000}
-    #wrap{display:flex;align-items:center;justify-content:center;height:100%}
+    #wrap{display:flex;align-items:center;justify-content:center;height:100vh}
     video{width:100%;max-width:960px;height:auto;background:#000}
+    #msg{position:fixed;top:10px;left:10px;color:#0f0;font:12px/1.4 monospace}
   </style>
 </head>
 <body>
   <div id="wrap">
-    <video id="video" controls autoplay playsinline></video>
+    <video id="video" controls playsinline></video>
   </div>
+  <div id="msg"></div>
 
-  <!-- hls.js -->
   <script src="https://cdn.jsdelivr.net/npm/hls.js@1"></script>
   <script>
-    // 1) Your Cloudflare Worker base:
-    const WORKER_BASE = "https://aaludon.makestepwithme.workers.dev/";
+    const WORKER_BASE = "https://YOUR_WORKER_NAME.YOUR_ACCOUNT.workers.dev/"; // <-- put your workers.dev here
 
-    // 2) The origin HLS (master or variant) URL you want to play:
-    const ORIGIN_HLS = "https://tataplay.slivcdn.com/hls/live/2011749/SABHD/master_3500.m3u8";
+    // Accept ?src=... (raw m3u8). If missing, set one here for default testing.
+    const q = new URLSearchParams(location.search);
+    const originHls = q.get("src") || "https://tataplay.slivcdn.com/hls/live/2011749/SABHD/master_3500.m3u8";
 
-    // Build proxied URL using "path style"
-    const PROXIED = WORKER_BASE + encodeURIComponent(ORIGIN_HLS);
+    // Use path-style so every internal request keeps going through the worker
+    const proxied = WORKER_BASE + encodeURIComponent(originHls);
 
-    const video = document.getElementById("video");
+    const v = document.getElementById("video");
+    const log = (t)=>document.getElementById("msg").textContent = t;
 
-    if (Hls.isSupported()) {
-      const hls = new Hls({
-        enableWorker: true,
-        lowLatencyMode: true,
-        backBufferLength: 60
-      });
-      hls.loadSource(PROXIED);
-      hls.attachMedia(video);
+    function start(src) {
+      if (Hls.isSupported()) {
+        const hls = new Hls({ enableWorker: true, lowLatencyMode: true, backBufferLength: 60 });
+        hls.loadSource(src);
+        hls.attachMedia(v);
 
-      hls.on(Hls.Events.MANIFEST_PARSED, () => {
-        console.log("Levels:", hls.levels.map(l => ({bitrate:l.bitrate, height:l.height})));
-        video.play().catch(()=>{});
-      });
-    } else if (video.canPlayType("application/vnd.apple.mpegurl")) {
-      video.src = PROXIED;
-      video.addEventListener("loadedmetadata", () => video.play().catch(()=>{}));
-    } else {
-      document.body.innerHTML = "<p style='color:#fff;text-align:center'>HLS not supported in this browser.</p>";
+        hls.on(Hls.Events.MANIFEST_PARSED, () => { log("MANIFEST parsed"); v.play().catch(()=>{}); });
+        hls.on(Hls.Events.ERROR, (_e, data) => { log("HLS error: " + (data && data.details || "unknown")); });
+      } else if (v.canPlayType("application/vnd.apple.mpegurl")) {
+        v.src = src; v.addEventListener("loadedmetadata", () => v.play().catch(()=>{}));
+      } else {
+        log("HLS not supported in this browser.");
+      }
     }
+    start(proxied);
   </script>
 </body>
 </html>
