--- a/player.html
+++ b/player.html
@@ -19,7 +19,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/hls.js@1"></script>
   <script>
-    const WORKER_BASE = "https://YOUR_WORKER_NAME.YOUR_ACCOUNT.workers.dev/"; // <-- put your workers.dev here
+    const WORKER_BASE = "https://aaludon.makestepwithme.workers.dev/"; // <-- put your workers.dev here
 
     // Accept ?src=... (raw m3u8). If missing, set one here for default testing.
     const q = new URLSearchParams(location.search);
