--- a/player.html
+++ b/player.html
@@ -28,7 +28,7 @@
 
     <script>
         const video = document.getElementById('video');
-        const streamURL = "https://aaludon.makestepwithme.workers.dev/?url=https://fataplay.slivcdn.com/live/file/2011749/SABHD/master_3500.m3u8";
+        const streamURL = "https://aaludon.makestepwithme.workers.dev/?url=https://tataplay.slivcdn.com/live/file/2011749/SABHD/master_3500.m3u8";
 
         if (Hls.isSupported()) {
             const hls = new Hls();
